--- a/style.css
+++ b/style.css
@@ -7,31 +7,31 @@ body{
 }
 
 #contenedor{
-    width: 900px;
-    height: 500px;
-    text-align: center;
-
-    position: absolute;
-    inset: 0;
+     width: 900px;
+     height: 500px;
+     text-align: center;
+    /*Para centrar el Div horizontal y verticalmente*/
+     position: absolute;
+     inset: 0;
     margin: auto;
     border-radius: 10px;
     overflow: hidden;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
-    0 10px 10px rgba(0, 0, 0, 0.22);
+     0 10px 10px rgba(0, 0, 0, 0.22);
 
 }
 
 #calculadora{
     background: white;
-
+/* Líneas para que los Div queden de un lado*/
     width: 50%;
     height: 100%;
     float: left;
 }
 
 #detalle{
-    background: #025815;
-
+    background: rgb(57, 107, 0);
+/*Ayuda a que los Div se posicionen de forma paralela*/
     width: 50%;
     height: 100%;
     float: left;
@@ -39,8 +39,8 @@ body{
 }
 
 .contenido{
-
-    position:relative;
+/*Para centrar el contenido de forma vertical en cada div ;)*/
+    position: relative;
     top: 50%;
     transform: translateY(-50%);
     overflow: hidden;
@@ -48,24 +48,27 @@ body{
 }
 
 input{
-        width: 70%;
+    width: 70%;
     padding: 12px 15px;
     border: none;
     background-color: #eee;
+    border-radius: 30px;
 }
+/*Para configurar el boton de calcular*/
 button {
-    font-size: 15px;
+      font-size: 15px;
       font-weight: bold;
       padding: 12px 45px;
       border-radius: 30px;
-      background-color: #008d1f;
-      border: 1px solid #029922;
+      background-color: #0ba805;
+      border: 1px solid rgb(66, 202, 3);
       color:#FFFFFF;
       text-transform: uppercase;
       letter-spacing: 1px;
       transition: transform 20ms ease-in;
+      margin-top: 10%;
 }
-
+/*Activar el boton*/
 button:active {
     transform: scale(0.95);
 }
